# argparse

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
example/: compile.sh
example/src/: example.cc  example_auto_help.cc  example_manual_help.cc
include/argparse/: defs.h  parameter.h  parameter_bool.h  parameter_float.h  parameter_integer.h  parameter_none.h  parameter_string.h  parser.h  util.h
src/argparse/: defs.cc  parameter.cc  parameter_bool.cc  parameter_float.cc  parameter_integer.cc  parameter_none.cc  parameter_string.cc  parser.cc  util.cc
tests/: README.md  test_auto_help.cc  test_framework.cc  test_framework.h  test_integration.cc  test_parameter_bool.cc  test_parameters.cc  test_parser.cc  test_runner.cc  test_util.cc
